--- a/signup.html
+++ b/signup.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Signup</title>
 </head>
 <body>
@@ -20,13 +20,13 @@
             <p id="incorrect" class="text-danger"></p>
 
             <button onclick="signup()" class="btn btn-outline-primary w-100 my-3">Signup</button>
-            <p class="text-white">You have an account? <a class="text-white" href="/login.html">Login</a></p>
+            <p class="text-white">You have an account? <a class="text-white" href="login.html">Login</a></p>
 
         </div>
     </div>
 
 
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/signup.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/signup.js"></script>
 </body>
 </html>
