--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark group" >
       <div class="container">
-        <a class="navbar-brand" href="/">SMART LOGIN</a>
+        <a class="navbar-brand" href="#">SMART LOGIN</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -28,7 +28,7 @@
           <div class="d-flex">
             <a
                 class="nav-link btn btn-outline-warning text-white"
-                href="/"
+                href=""
                 onclick="logout()"
                 >Logout</a
               >
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
