--- a/login.html
+++ b/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Login</title>
 </head>
 <body>
@@ -17,14 +17,14 @@
             <p id="incorrect"></p>
 
             <button onclick="login()" class="btn btn-outline-primary w-100 my-3">Login</button>
-            <p class="text-white">Don't have an account? <a class="text-white" href="/signup.html">Sign Up</a></p>
+            <p class="text-white">Don't have an account? <a class="text-white" href="signup.html">Sign Up</a></p>
 
         </div>
     </div>
 
 
 
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/login.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
